--- a/00_設定基準.md
+++ b/00_設定基準.md
@@ -2,4 +2,4 @@
 
 | No. | 分類 | 重要度 | ID | タイトル | 関連 | 解説／対応方針 | 新規・本番 | 新規・開発 | 既存・本番 | 既存・開発 |
 | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| 1 | IAM | 重要 | IAM.4 | IAM ルートユーザーアクセスキーは存在してはなりません | CIS.1.12 | [IAM.4](IAM.4.md) | 強く推奨 | 強く推奨 | 強く推奨 | 強く推奨 |
+| 1 | IAM | 重要 | IAM.4 | IAM ルートユーザーアクセスキーは存在してはなりません | CIS.1.12 | [IAM.4](aaa/IAM.4.md) | 強く推奨 | 強く推奨 | 強く推奨 | 強く推奨 |
