--- a/設定基準一覧.md
+++ b/設定基準一覧.md
@@ -2,6 +2,162 @@
 
 | 項番 | 基準 | 分類 | 重要度 | ID | タイトル | 関連 | 解説／対応方針 | 新規本番 | 新規開発 | 既存本番 | 既存開発 |
 | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
-|1|AWS|IAM|重要|IAM.4|IAM ルートユーザーアクセスキーは存在してはなりません|IAM.4</br>CIS.1.12||強く推奨|強く推奨|強く推奨|強く推奨|
+|1|AWS|IAM|重要|IAM.4|IAM ルートユーザーアクセスキーは存在してはなりません|IAM.4</br>CIS.1.12|[IAM.4](AWS/IAM.4.md)|強く推奨|強く推奨|強く推奨|強く推奨|
 |2|AWS|RDS|重要|RDS.2|RDS DB インスタンスはパブリックアクセスを禁止する必要があります。PubliclyAccessible 設定によって決まります。||[RDS.2](AWS/RDS.2.md)|強く推奨|強く推奨|推奨|推奨|
 |3|AWS|EC2|高|EC2.8|EC2 インスタンスでは、Instance Metadata Service Version 2 (IMDSv2) を使用する必要があります||[EC2.8](AWS/EC2.8.md)|強く推奨|強く推奨|推奨|推奨|
+|4|AWS|S3|高|S3.8|S3 Block Public Access setting should be enabled at the bucket-level||[S3.8](AWS/S3.8.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|5|AWS|EC2|高|EC2.18|Security groups should only allow unrestricted incoming traffic for authorized ports|EC2.18</br>CIS.4.1</br>CIS.4.2|[EC2.18](AWS/EC2.18.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|6|AWS|EC2|高|EC2.9|EC2 instances should not have a public IPv4 address||[EC2.9](AWS/EC2.9.md)|強く推奨|強く推奨|推奨|推奨|
+|7|AWS|EC2|高|EC2.2|VPC のデフォルトのセキュリティグループはインバウンドトラフィックとアウトバウンドトラフィックを許可しない必要があります|EC2.2</br>CIS.4.3|[EC2.2](AWS/EC2.2.md)|強く推奨|強く推奨|任意|任意|
+|8|AWS|RDS|高|RDS.13|RDS automatic minor version upgrades should be enabled||[RDS.13](AWS/RDS.13.md)|任意|任意|任意|任意|
+|9|AWS|ECS|高|ECS.2|ECS services should not have public IP addresses assigned to them automatically|ECS.2</br>EMR.1|[ECS.2](AWS/ECS.2.md)|強く推奨|強く推奨|推奨|推奨|
+|10|AWS|CloudTrail|高|CloudTrail.1|CloudTrail を有効にして、少なくとも 1 つのマルチリージョントレイルで設定する必要があります|CloudTrail.1</br>CIS.2.1|[CloudTrail.1](AWS/CloudTrail.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|11|AWS|IAM|高|IAM.1|IAM ポリシーは完全な「*」管理権限を許可してはなりません|IAM.1</br>CIS.1.22|[IAM.1](AWS/IAM.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|12|AWS|GuardDuty|高|GuardDuty.1|GuardDuty を有効にする必要があります||[GuardDuty.1](AWS/GuardDuty.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|13|AWS|S3|高|S3.6|S3 バケットポリシーで他の AWS アカウントに付与される S3 アクセス許可は制限する必要があります||[S3.6](AWS/S3.6.md)|推奨|推奨|推奨|推奨|
+|14|AWS|EC2|中|EC2.3|アタッチされた EBS ボリュームは、保管時に暗号化する必要があります||[EC2.3](AWS/EC2.3.md)|強く推奨|強く推奨|推奨|推奨|
+|15|AWS|S3|中|S3.5|S3 バケットでは Secure Socket Layer を使用するためのリクエストを求める必要があります||[S3.5](AWS/S3.5.md)|強く推奨|強く推奨|推奨|推奨|
+|16|AWS|S3|中|S3.4|S3 バケットでは、サーバー側の暗号化を有効にする必要があります||[S3.4](AWS/S3.4.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|17|AWS|RDS|中|RDS.4|RDS クラスタースナップショットとデータベーススナップショットは保管時に暗号化する必要があります||[RDS.4](AWS/RDS.4.md)|強く推奨|強く推奨|推奨|推奨|
+|18|AWS|SSM|中|SSM.1|EC2 インスタンスは、AWS Systems Manager で管理する必要があります||[SSM.1](AWS/SSM.1.md)|強く推奨|強く推奨|推奨|推奨|
+|19|AWS|IAM|中|IAM.3|IAM ユーザーのアクセスキーは、90 日以内にローテーションする必要があります|IAM.3</br>CIS.1.4|[IAM.3](AWS/IAM.3.md)|推奨|推奨|推奨|推奨|
+|20|AWS|IAM|中|IAM.8|使用されていない IAM ユーザー認証情報は削除する必要があります|IAM.8</br>CIS.1.3|[IAM.8](AWS/IAM.8.md)|推奨|推奨|推奨|推奨|
+|21|AWS|EC2|中|EC2.4|停止した EC2 インスタンスは、指定した期間後に削除する必要があります||[EC2.4](AWS/EC2.4.md)|任意|任意|任意|任意|
+|22|AWS|EC2|中|EC2.15|EC2 subnets should not automatically assign public IP addresses||[EC2.15](AWS/EC2.15.md)|推奨|推奨|推奨|推奨|
+|23|AWS|ELB|中|ELB.6|Application Load Balancer deletion protection should be enabled||[ELB.6](AWS/ELB.6.md)|任意|任意|任意|任意|
+|24|AWS|Lambda|中|Lambda.2|Lambda 関数は最新のランタイムを使用する必要があります||[Lambda.2](AWS/Lambda.2.md)|推奨|推奨|推奨|推奨|
+|25|AWS|EC2|中|EC2.10|Amazon EC2 should be configured to use VPC endpoints||[EC2.10](AWS/EC2.10.md)|任意|任意|任意|任意|
+|26|AWS|EC2|中|EC2.6|VPC フローログ記録はすべての VPC で有効にする必要があります|EC2.6</br>CIS.2.9|[EC2.6](AWS/EC2.6.md)|推奨|推奨|推奨|推奨|
+|27|AWS|ELB|中|ELB.4|Application load balancer should be configured to drop http headers||[ELB.4](AWS/ELB.4.md)|強く推奨|強く推奨|推奨|推奨|
+|28|AWS|ELB|中|ELB.5|Application and Classic Load Balancers logging should be enabled||[ELB.5](AWS/ELB.5.md)|強く推奨|強く推奨|推奨|推奨|
+|29|AWS|EC2|中|EC2.19|Security groups should not allow unrestricted access to ports with high risk||[EC2.19](AWS/EC2.19.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|30|AWS|IAM|中|IAM.5|MFA は、コンソールパスワードを持つすべての IAM ユーザーに対して有効にする必要があります|IAM.5</br>CIS.1.2|[IAM.5](AWS/IAM.5.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|31|AWS|RDS|中|RDS.5|RDS DB インスタンスは複数のアベイラビリティーゾーンで設定する必要があります||[RDS.5](AWS/RDS.5.md)|任意|任意|任意|任意|
+|32|AWS|SNS|中|SNS.1|SNS topics should be encrypted at-rest using AWS KMS||[SNS.1](AWS/SNS.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|33|AWS|APIGateway|中|APIGateway.2|API Gateway REST API stages should be configured to use SSL certificates for backend authentication||[APIGateway.2](AWS/APIGateway.2.md)|任意|任意|任意|任意|
+|34|AWS|APIGateway|中|APIGateway.4|API Gateway should be associated with a WAF Web ACL||[APIGateway.4](AWS/APIGateway.4.md)|任意|任意|任意|任意|
+|35|AWS|APIGateway|中|APIGateway.1|API Gateway REST and WebSocket API execution logging should be enabled||[APIGateway.1](AWS/APIGateway.1.md)|強く推奨|任意|強く推奨|任意|
+|36|AWS|KMS|中|KMS.2|IAM プリンシパルには、すべての KMS キーで復号アクションを許可する IAM インラインポリシーがあってはなりません||[KMS.2](AWS/KMS.2.md)|強く推奨|推奨|強く推奨|推奨|
+|37|AWS|RDS|中|RDS.3|RDS DB インスタンスでは、保管時の暗号化を有効にする必要があります||[RDS.3](AWS/RDS.3.md)|強く推奨|推奨|推奨|推奨|
+|38|AWS|KMS|中|KMS.1|IAM カスタマー管理ポリシーでは、すべての KMS キーで復号アクションを許可してはなりません||[KMS.1](AWS/KMS.1.md)|推奨|推奨|推奨|推奨|
+|39|AWS|S3|中|S3.1|S3 ブロックパブリックアクセス設定を有効にする必要があります||[S3.1](AWS/S3.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|40|AWS|CloudTrail|中|CloudTrail.2|CloudTrail では、保管時の暗号化を有効にする必要があります|CloudTrail.2</br>CIS.2.7|[CloudTrail.2](AWS/CloudTrail.2.md)|任意|任意|任意|任意|
+|41|AWS|ELBv2|中|ELBv2.1|Application Load Balancer は、すべての HTTP リクエストを HTTPS にリダイレクトするように設定する必要があります||[ELBv2.1](AWS/ELBv2.1.md)|強く推奨|推奨|強く推奨|推奨|
+|42|AWS|IAM|中|IAM.7|IAM ユーザーのパスワードポリシーには、強力な設定が必要です|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9|[IAM.7](AWS/IAM.7.md)|強く推奨|強く推奨|強く推奨|推奨|
+|43|AWS|ACM|中|ACM.1|ACM 証明書は、指定された期間後に更新する必要があります。||[ACM.1](AWS/ACM.1.md)|強く推奨|推奨|強く推奨|推奨|
+|44|AWS|EC2|中|EC2.7|EBS のデフォルト暗号化を有効にする必要があります||[EC2.7](AWS/EC2.7.md)|強く推奨|強く推奨|推奨|推奨|
+|45|AWS|RDS|中|RDS.10|IAM authentication should be configured for RDS instances||[RDS.10](AWS/RDS.10.md)|推奨|推奨|推奨|推奨|
+|46|AWS|RDS|中|RDS.15|RDS DB clusters should be configured for multiple Availability Zones||[RDS.15](AWS/RDS.15.md)|任意|任意|任意|任意|
+|47|AWS|RDS|中|RDS.9|Database logging should be enabled||[RDS.9](AWS/RDS.9.md)|推奨|推奨|推奨|推奨|
+|48|AWS|SQS|中|SQS.1|Amazon SQS queues should be encrypted at rest||[SQS.1](AWS/SQS.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|49|AWS|DynamoDB|中|DynamoDB.1|DynamoDB tables should automatically scale capacity with demand||[DynamoDB.1](AWS/DynamoDB.1.md)|任意|任意|任意|任意|
+|50|AWS|DynamoDB|中|DynamoDB.2|DynamoDB tables should have point-in-time recovery enabled||[DynamoDB.2](AWS/DynamoDB.2.md)|任意|任意|任意|任意|
+|51|AWS|EFS|中|EFS.1|Elastic File System は、AWS KMS を使用して保管時のファイルデータを暗号化するように設定する必要があります||[EFS.1](AWS/EFS.1.md)|強く推奨|強く推奨|推奨|推奨|
+|52|AWS|EFS|中|EFS.2|Amazon EFS volumes should be in backup plans||[EFS.2](AWS/EFS.2.md)|任意|任意|任意|任意|
+|53|AWS|ELB|中|ELB.2|Classic Load Balancers with SSL/HTTPS listeners should use a certificate provided by AWS Certificate Manager||[ELB.2](AWS/ELB.2.md)|推奨|推奨|任意|任意|
+|54|AWS|RDS|中|RDS.12|IAM authentication should be configured for RDS clusters|RDS.10</br>RDS.12|[RDS.12](AWS/RDS.12.md)|推奨|推奨|推奨|推奨|
+|55|AWS|SecretsManager|中|SecretsManager.1|Secrets Manager のシークレットでは、自動ローテーションを有効にする必要があります||[SecretsManager.1](AWS/SecretsManager.1.md)|推奨|推奨|推奨|推奨|
+|56|AWS|ELB|中|ELB.8|Classic Load Balancers with HTTPS/SSL listeners should use a predefined security policy that has strong configuration||[ELB.8](AWS/ELB.8.md)|強く推奨|強く推奨|推奨|推奨|
+|57|AWS|Config|中|Config.1|AWS Config を有効にする必要があります|Config.1</br>CIS.2.5|[Config.1](AWS/Config.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|58|AWS|ELB|中|ELB.3|Classic Load Balancer listeners should be configured with HTTPS or TLS termination||[ELB.3](AWS/ELB.3.md)|強く推奨|強く推奨|推奨|推奨|
+|59|AWS|RDS|中|RDS.14|Amazon Aurora clusters should have backtracking enabled||[RDS.14](AWS/RDS.14.md)|推奨|任意|推奨|任意|
+|60|AWS|IAM|低|IAM.2|IAM ユーザーには IAM ポリシーをアタッチしないでください|IAM.2</br>CIS.1.16||||||
+|61|AWS|IAM|低|IAM.21|IAM customer managed policies that you create should not allow wildcard actions for services|||||||
+|62|AWS|RDS|低|RDS.23|RDS instances should not use a database engine default port|||||||
+|63|AWS|APIGateway|低|APIGateway.3|API Gateway REST API stages should have AWS X-Ray tracing enabled|||||||
+|64|AWS|RDS|低|RDS.6|RDS DB インスタンスおよびクラスターに対して拡張モニタリングを設定する必要があります|||||||
+|65|AWS|RDS|低|RDS.17|RDS DB instances should be configured to copy tags to snapshots|||||||
+|66|AWS|CloudTrail|低|CloudTrail.5|CloudTrail trails should be integrated with Amazon CloudWatch Logs|CloudTrail.5</br>CIS.2.4||||||
+|67|AWS|RDS|低|RDS.8|RDS DB インスタンスでは、削除保護を有効にする必要があります|||||||
+|68|AWS|EC2|低|EC2.17|EC2 instances should not use multiple ENIs|||||||
+|69|AWS|RDS|低|RDS.7|RDS クラスターでは、削除保護を有効にする必要があります|||||||
+|70|AWS|RDS|低|RDS.20|An RDS event notifications subscription should be configured for critical database instance events|||||||
+|71|AWS|SSM|低|SSM.3|Systems Manager によって管理される EC2 インスタンスでは、関連付けコンプライアンスステータスが COMPLIANT である必要があります|||||||
+|72|AWS|CloudTrail|低|CloudTrail.4|CloudTrail log file validation should be enabled|CloudTrail.4</br>CIS.2.2||||||
+|73|AWS|RDS|低|RDS.16|RDS DB clusters should be configured to copy tags to snapshots|||||||
+|74|AWS|EC2|低|EC2.16|Unused Network Access Control Lists should be removed|||||||
+|75|AWS|IAM|重要|IAM.6|ハードウェア MFA はルートユーザーに対して有効にする必要があります|IAM.6</br>CIS.1.14|[IAM.6](AWS/IAM.6.md)|任意|任意|任意|任意|
+|76|AWS|SSM|重要|SSM.4|SSM documents should not be public||[SSM.4](AWS/SSM.4.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|77|AWS|CodeBuild|重要|CodeBuild.1|CodeBuild GitHub または Bitbucket ソースリポジトリの URL は OAuth を使用する必要があります||[CodeBuild.1](AWS/CodeBuild.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|78|AWS|CodeBuild|重要|CodeBuild.2|CodeBuild プロジェクトの環境変数には、クリアテキストの認証情報を含めないでください||[CodeBuild.2](AWS/CodeBuild.2.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|79|AWS|DMS|重要|DMS.1|Database Migration Service のレプリケーションインスタンスはパブリックであってはなりません||[DMS.1](AWS/DMS.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|80|AWS|EC2|重要|EC2.1|EBS スナップショットはパブリックであってはなりません。誰でも復元できるかどうかによって決まります。||[EC2.1](AWS/EC2.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|81|AWS|ES|重要|ES.2|Amazon Elasticsearch Service domains should be in a VPC||[ES.2](AWS/ES.2.md)|強く推奨|強く推奨|推奨|推奨|
+|82|AWS|KMS|重要|KMS.3|AWS KMS keys should not be deleted unintentionally||[KMS.3](AWS/KMS.3.md)|任意|任意|任意|任意|
+|83|AWS|Lambda|重要|Lambda.1|Lambda 関数は、他のアカウントによるパブリックアクセスを禁止する必要があります||[Lambda.1](AWS/Lambda.1.md)|強く推奨|強く推奨|推奨|推奨|
+|84|AWS|RDS|重要|RDS.1|RDS スナップショットはプライベートにする必要があります||[RDS.1](AWS/RDS.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|85|AWS|Redshift|重要|Redshift.1|Amazon Redshift clusters should prohibit public access||[Redshift.1](AWS/Redshift.1.md)|強く推奨|強く推奨|推奨|推奨|
+|86|AWS|S3|重要|S3.2|S3 バケットはパブリック読み取りアクセスを禁止する必要があります||[S3.2](AWS/S3.2.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|87|AWS|S3|重要|S3.3|S3 バケットはパブリック書き込みアクセスを禁止する必要があります||[S3.3](AWS/S3.3.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|88|AWS|ECS|高|ECS.1|Amazon ECS タスク定義には、安全なネットワークモードとユーザー定義が必要です||[ECS.1](AWS/ECS.1.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|89|AWS|EMR|高|EMR.1|Amazon Elastic MapReduce クラスターのマスターノードにはパブリック IP を使用できません|ECS.2</br>EMR.1|[EMR.1](AWS/EMR.1.md)|強く推奨|強く推奨|推奨|推奨|
+|90|AWS|ElasticBeanstalk|高|ElasticBeanstalk.2|Elastic Beanstalk managed platform updates should be enabled||[ElasticBeanstalk.2](AWS/ElasticBeanstalk.2.md)|推奨|推奨|推奨|推奨|
+|91|AWS|RDS|高|RDS.18|RDS instances should be deployed in a VPC||[RDS.18](AWS/RDS.18.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|92|AWS|SSM|高|SSM.2|Systems Manager で管理される EC2 インスタンスでは、パッチのインストール後、パッチコンプライアンスステータスが COMPLIANT である必要があります||[SSM.2](AWS/SSM.2.md)|推奨|推奨|推奨|推奨|
+|93|AWS|SageMaker|高|SageMaker.1|Amazon SageMaker ノートブックインスタンスにインターネットへの直接アクセスを設定しないようにします||[SageMaker.1](AWS/SageMaker.1.md)|推奨|推奨|推奨|推奨|
+|94|AWS|APIGateway|中|APIGateway.5|API Gateway REST API cache data should be encrypted at rest|||||||
+|95|AWS|DynamoDB|中|DynamoDB.3|DynamoDB Accelerator (DAX) clusters should be encrypted at rest|||||||
+|96|AWS|ELB|中|ELB.7|Classic Load Balancers should have connection draining enabled|||||||
+|97|AWS|ES|中|ES.1|ElasticSearch ドメインでは、保管時の暗号化を有効にする必要があります|||||||
+|98|AWS|ES|中|ES.3|Amazon Elasticsearch domains should encrypt data sent between nodes|||||||
+|99|AWS|ES|中|ES.4|Amazon Elasticsearch Service domain error logging to CloudWatch Logs should be enabled|||||||
+|100|AWS|ES|中|ES.5|Amazon Elasticsearch domains should have audit logging enabled|||||||
+|101|AWS|ES|中|ES.6|Amazon Elasticsearch domains should have at least three data nodes|||||||
+|102|AWS|ES|中|ES.7|Amazon Elasticsearch domains should be configured with at least three dedicated master nodes|||||||
+|103|AWS|ES|中|ES.8|Connections to Amazon Elasticsearch domains should be encrypted using TLS 1.2|||||||
+|104|AWS|Redshift|中|Redshift.2|Connections to Amazon Redshift clusters should be encrypted in transit|||||||
+|105|AWS|Redshift|中|Redshift.3|Amazon Redshift clusters should have automatic snapshots enabled|||||||
+|106|AWS|Redshift|中|Redshift.4|Amazon Redshift clusters should have audit logging enabled|||||||
+|107|AWS|Redshift|中|Redshift.6|Amazon Redshift should have automatic upgrades to major versions enabled|||||||
+|108|AWS|Redshift|中|Redshift.7|Redshift clusters should use enhanced VPC routing|||||||
+|109|AWS|SecretsManager|中|SecretsManager.2|自動ローテーションで設定された Secrets Manager シークレットは正常にローテーションする||[SecretsManager.2](AWS/SecretsManager.2.md)|||||
+|110|AWS|SecretsManager|中|SecretsManager.3|Remove unused Secrets Manager secrets|||||||
+|111|AWS|SecretsManager|中|SecretsManager.4|Secrets Manager secrets should be rotated within a specified number of days|||||||
+|112|AWS|AutoScaling|低|AutoScaling.1|ロードバランサーに関連付けられた Auto Scaling グループはロードバランサーのヘルスチェックを使用する必要があります|||||||
+|113|AWS|ElasticBeanstalk|低|ElasticBeanstalk.1|Elastic Beanstalk environments should have enhanced health reporting enabled|||||||
+|114|AWS|RDS|低|RDS.19|An RDS event notifications subscription should be configured for critical cluster events|||||||
+|115|AWS|RDS|低|RDS.21|An RDS event notifications subscription should be configured for critical database parameter group events|||||||
+|116|AWS|RDS|低|RDS.22|An RDS event notifications subscription should be configured for critical database security group events|||||||
+|117|CIS|IAM|重要|CIS.1.14|ハードウェア MFA が「ルート」アカウントに対して有効であることを確認する|IAM.6</br>CIS.1.14||||||
+|118|CIS|IAM|重要|CIS.1.13|MFA が「ルート」アカウントに対して有効であることを確認する||[CIS.1.13](CIS/CIS.1.13.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|119|CIS|IAM|重要|CIS.1.12|ルートアカウントのアクセスキーが存在しないことを確認する|IAM.4</br>CIS.1.12||||||
+|120|CIS|EC2|高|CIS.4.3|すべての VPC のデフォルトセキュリティグループがすべてのトラフィックを制限していることを確認する|EC2.2</br>CIS.4.3||||||
+|121|CIS|EC2|高|CIS.4.1|どのセキュリティグループも 0.0.0.0/0 からポート 22 への侵入を許可していないことを確認する|EC2.18</br>CIS.4.1</br>CIS.4.2||||||
+|122|CIS|EC2|高|CIS.4.2|どのセキュリティグループも 0.0.0.0/0 からポート 3389 への侵入を許可していないことを確認する|EC2.18</br>CIS.4.1</br>CIS.4.2||||||
+|123|CIS|IAM|高|CIS.1.22|完全な「*:*」管理権限を許可する IAM ポリシーが作成されていないことを確認する|IAM.1</br>CIS.1.22||||||
+|124|CIS|CloudTrail|高|CIS.2.1|CloudTrail がすべてのリージョンで有効であることを確認する|CloudTrail.1</br>CIS.2.1||||||
+|125|CIS|IAM|中|CIS.1.4|アクセスキーが 90 日以内にローテーションされることを確認する|IAM.3</br>CIS.1.4||||||
+|126|CIS|IAM|中|CIS.1.3|90 日以上使用されていない認証情報が無効であることを確認する|IAM.8</br>CIS.1.3||||||
+|127|CIS|EC2|中|CIS.2.9|すべての VPC で VPC フローロギングが有効であることを確認する|EC2.6</br>CIS.2.9||||||
+|128|CIS|IAM|中|CIS.1.2|コンソールパスワードを持つすべての IAM ユーザーに対して Multi-Factor authentication (MFA) が有効であることを確認する|IAM.5</br>CIS.1.2||||||
+|129|CIS|IAM|中|CIS.1.9|IAM パスワードポリシーで、最小文字数の 14 文字かそれ以上が要求されていることを確認する|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9||||||
+|130|CIS|CloudTrail|中|CIS.2.7|KMS CMK を使用して CloudTrail ログが保存時に暗号化されていることを確認する|CloudTrail.2</br>CIS.2.7||||||
+|131|CIS|KMS|中|CIS.2.8|顧客が作成した CMK のローテーションが有効であることを確認する||[CIS.2.8](CIS/CIS.2.8.md)|強く推奨|強く推奨|強く推奨|強く推奨|
+|132|CIS|IAM|中|CIS.1.5|IAM パスワードポリシーで少なくとも 1 文字の大文字が要求されていることを確認する|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9||||||
+|133|CIS|IAM|中|CIS.1.6|IAM パスワードポリシーで少なくとも 1 文字の小文字が要求されていることを確認する|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9||||||
+|134|CIS|IAM|中|CIS.1.7|IAM パスワードポリシーで少なくとも 1 文字の記号が要求されていることを確認する|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9||||||
+|135|CIS|IAM|中|CIS.1.8|IAM パスワードポリシーで少なくとも 1 文字の数字が要求されていることを確認する|IAM.7</br>CIS.1.5</br>CIS.1.6</br>CIS.1.7</br>CIS.1.8</br>CIS.1.9||||||
+|136|CIS|Config|中|CIS.2.5|AWS Config が有効になっていることを確認する|Config.1</br>CIS.2.5||||||
+|137|CIS|IAM|低|CIS.1.16|IAM ポリシーがグループまたはロールだけにアタッチされていることを確認する|IAM.2</br>CIS.1.16||||||
+|138|CIS|IAM|低|CIS.1.1|「ルート」アカウントの使用を避ける|||||||
+|139|CIS|IAM|低|CIS.1.10|IAM パスワードポリシーを確認して、パスワードの再利用を防ぐ|||||||
+|140|CIS|IAM|低|CIS.1.11|IAM パスワードポリシーでパスワードが 90 日以内に有効期限切れとなることを確認する|||||||
+|141|CIS|CloudWatch|低|CIS.3.1|不正な API 呼び出しに対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|142|CIS|CloudWatch|低|CIS.3.10|セキュリティグループの変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|143|CIS|CloudWatch|低|CIS.3.11|ネットワークアクセスコントロールリスト (NACL) の変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|144|CIS|CloudWatch|低|CIS.3.12|ネットワークゲートウェイの変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|145|CIS|CloudWatch|低|CIS.3.13|ルートテーブルの変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|146|CIS|CloudWatch|低|CIS.3.14|VPC の変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|147|CIS|CloudWatch|低|CIS.3.2|MFA なしでのマネジメントコンソールサインインに対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|148|CIS|CloudWatch|低|CIS.3.3|「ルート」アカウントの使用に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|149|CIS|CloudWatch|低|CIS.3.4|IAM ポリシーの変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|150|CIS|CloudWatch|低|CIS.3.5|CloudTrail 設定の変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|151|CIS|CloudWatch|低|CIS.3.6|AWS マネジメントコンソール認証失敗に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|152|CIS|CloudWatch|低|CIS.3.7|お客様が作成した CMK の無効化またはスケジュールされた削除に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|153|CIS|CloudWatch|低|CIS.3.8|S3 バケットポリシーの変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|154|CIS|CloudWatch|低|CIS.3.9|AWS Config 設定の変更に対してログメトリクスフィルタとアラームが存在することを確認する|||||||
+|155|CIS|CloudTrail|低|CIS.2.4|CloudTrail の証跡が CloudWatch Logs と統合されていることを確認する|CloudTrail.5</br>CIS.2.4||||||
+|156|CIS|CloudTrail|低|CIS.2.6|CloudTrail S3 バケットで S3 バケットアクセスログが有効であることを確認する|||||||
+|157|CIS|IAM|低|CIS.1.20|AWS サポートでインシデントを管理するためのサポートロールが作成されていることを確認する|||||||
+|158|CIS|CloudTrail|低|CIS.2.2|CloudTrail ログファイル検証が有効であることを確認する|CloudTrail.4</br>CIS.2.2||||||
+|159|CIS|CloudTrail|重要|CIS.2.3|CloudTrail ログを保存するために使用される S3 バケットが一般にアクセス可能ではないことを確認する|S3.8</br>CIS.2.3|[CIS.2.3](CIS/CIS.2.3.md)|強く推奨|強く推奨|強く推奨|強く推奨|
