--- a/設定基準一覧.md
+++ b/設定基準一覧.md
@@ -1,6 +1,6 @@
 # 設定基準
 
-| 項番 | 基準 | 分類 | 重要度 | ID | タイトル | 関連 | 解説／対応方針 | 新規本番 | 新規開発 | 既存本番 | 既存開発 |
+| 項番 | 基準 | 分類 | 重要度 | ID | タイトル | 関連 | 解説／対策 | 新規本番 | 新規開発 | 既存本番 | 既存開発 |
 | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
 |1|AWS|IAM|重要|IAM.4|IAM ルートユーザーアクセスキーは存在してはなりません|IAM.4</br>CIS.1.12|[IAM.4](AWS/IAM.4.md)|強く推奨|強く推奨|強く推奨|強く推奨|
 |2|AWS|RDS|重要|RDS.2|RDS DB インスタンスはパブリックアクセスを禁止する必要があります。PubliclyAccessible 設定によって決まります。||[RDS.2](AWS/RDS.2.md)|強く推奨|強く推奨|推奨|推奨|
